--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 <hr>
 <h3>More Infromation</h3>
 <a href="hobbies.html">My Hobbies</a>
-<a href="Contact.html">Contact me</a>
+<a href="contact.html">Contact me</a>
   </body>
 </html>
