--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td>
           <h1> Siddharth Gautam</h1>
           <p><em>Student at<strong> Indian Institute of Infromation Technology</strong>  Vadodara-ICD</em></p>
-          <p>I am Good in <strong> web Development, Flutter, Java, Communication.</strong></p>
+          <p>I am Good in <strong> Full stack web Development, Flutter, Java, Communication.</strong></p>
           <hr>
         </td>
       </tr>
@@ -49,7 +49,7 @@
   <tr>
     <td>2020-2024</td>
     <td>I am completing my B.tech from Indian Institute of Infromation Technology, Vadodara- ICD.
-    <p>Currently in my 2nd Year of CSE branch. </p>
+    <p>Currently in my 3rd Year of CSE branch. </p>
   </td>
   </tr>
 </table>
